--- a/app/Resources/translations/cocorico.en.xliff
+++ b/app/Resources/translations/cocorico.en.xliff
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:jms="urn:jms:translation" version="1.2">
-  <file date="2017-07-11T10:52:54Z" source-language="en" target-language="en" datatype="plaintext" original="not.available">
+  <file date="2017-07-20T11:15:02Z" source-language="en" target-language="en" datatype="plaintext" original="not.available">
     <header>
       <tool tool-id="JMSTranslationBundle" tool-name="JMSTranslationBundle" tool-version="1.1.0-DEV"/>
       <note>The source node in most cases contains the sample message as written by the developer. If it looks like a dot-delimitted string such as "form.label.firstname", then the developer has not provided a default message.</note>
@@ -88,8 +88,8 @@
         <jms:reference-file line="239">views/Form/fields.html.twig</jms:reference-file>
         <jms:reference-file line="335">views/Form/fields.html.twig</jms:reference-file>
         <jms:reference-file line="418">views/Form/fields.html.twig</jms:reference-file>
-        <jms:reference-file line="1050">views/Form/fields.html.twig</jms:reference-file>
-        <jms:reference-file line="1080">views/Form/fields.html.twig</jms:reference-file>
+        <jms:reference-file line="1091">views/Form/fields.html.twig</jms:reference-file>
+        <jms:reference-file line="1121">views/Form/fields.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="b369460718f0b8112273eb3930153ba99d63a373" resname="collection.remove_item">
         <source>collection.remove_item</source>
@@ -97,7 +97,7 @@
         <jms:reference-file line="208">views/Form/fields.html.twig</jms:reference-file>
         <jms:reference-file line="308">views/Form/fields.html.twig</jms:reference-file>
         <jms:reference-file line="388">views/Form/fields.html.twig</jms:reference-file>
-        <jms:reference-file line="1007">views/Form/fields.html.twig</jms:reference-file>
+        <jms:reference-file line="1048">views/Form/fields.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="45b97052db6fdc4abdcdefcc65952e83c06f682c" resname="company_info">
         <source>company_info</source>
@@ -142,48 +142,53 @@
       <trans-unit id="a949baa3fcb4d3b0ab046dccd4e8b71bf5974dcb" resname="footer.about.title">
         <source>footer.about.title</source>
         <target>About</target>
-        <jms:reference-file line="33">Frontend/Common/_footer.html.twig</jms:reference-file>
+        <jms:reference-file line="37">Frontend/Common/_footer.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="5e1d2c2c71162e0c24eddb9cae78b0296d9f6425" resname="footer.all_right_reserved">
         <source>footer.all_right_reserved</source>
         <target>all right reserved</target>
-        <jms:reference-file line="90">Frontend/Common/_footer.html.twig</jms:reference-file>
-        <jms:reference-file line="83">views/Mails/layout.html.twig</jms:reference-file>
+        <jms:reference-file line="106">Frontend/Common/_footer.html.twig</jms:reference-file>
+        <jms:reference-file line="82">views/Mails/layout.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="eafbb9e9132e8fc3dfed33243e7fb8781ab79935" resname="footer.contact_us.link">
         <source>footer.contact_us.link</source>
         <target>Contact us</target>
-        <jms:reference-file line="59">Frontend/Common/_footer.html.twig</jms:reference-file>
+        <jms:reference-file line="63">Frontend/Common/_footer.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="a650649eef07e27013b9ce411e4b9491b00f80b6" resname="footer.contact_us.title">
         <source>footer.contact_us.title</source>
         <target>Contact us</target>
-        <jms:reference-file line="12">Frontend/Common/_footer.html.twig</jms:reference-file>
+        <jms:reference-file line="16">Frontend/Common/_footer.html.twig</jms:reference-file>
+      </trans-unit>
+      <trans-unit id="c9f0d40883cc4ca2e9d6a025b87e64233d229666" resname="footer.donate">
+        <source>footer.donate</source>
+        <target>Donate</target>
+        <jms:reference-file line="68">Frontend/Common/_footer.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="28ad4e2c00f3d990a04f9ab8768495124bb6c10a" resname="footer.faq.link">
         <source>footer.faq.link</source>
         <target>FAQ</target>
-        <jms:reference-file line="54">Frontend/Common/_footer.html.twig</jms:reference-file>
+        <jms:reference-file line="58">Frontend/Common/_footer.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="f29216648f11b939a46dacd7be3882453ad8dc5f" resname="footer.help.title">
         <source>footer.help.title</source>
         <target><![CDATA[Help & Contact]]></target>
-        <jms:reference-file line="51">Frontend/Common/_footer.html.twig</jms:reference-file>
+        <jms:reference-file line="55">Frontend/Common/_footer.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="e0e024ec17d9d12220ca5b17920924967e9d9f4d" resname="footer.how_it_works.link">
         <source>footer.how_it_works.link</source>
         <target>How it works?</target>
-        <jms:reference-file line="41">Frontend/Common/_footer.html.twig</jms:reference-file>
+        <jms:reference-file line="45">Frontend/Common/_footer.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="67cf5390e62e92e302c2101585471ebf0c1c3d02" resname="footer.legal_notices.link">
         <source>footer.legal_notices.link</source>
         <target>Legal notices</target>
-        <jms:reference-file line="80">Frontend/Common/_footer.html.twig</jms:reference-file>
+        <jms:reference-file line="96">Frontend/Common/_footer.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="e961dfa45f7be14560d14913711c071c88968d3c" resname="footer.the_team.link">
         <source>footer.the_team.link</source>
         <target>The team</target>
-        <jms:reference-file line="46">Frontend/Common/_footer.html.twig</jms:reference-file>
+        <jms:reference-file line="50">Frontend/Common/_footer.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="69a1518dded704dee13c212c8fa93bfdbec43543" resname="footer.title.various">
         <source>footer.title.various</source>
@@ -193,7 +198,7 @@
       <trans-unit id="5f64194a8d285094204c3ef94b8dc3b6bebfa2d0" resname="footer.who_we_are.link">
         <source>footer.who_we_are.link</source>
         <target>Who we are?</target>
-        <jms:reference-file line="36">Frontend/Common/_footer.html.twig</jms:reference-file>
+        <jms:reference-file line="40">Frontend/Common/_footer.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="ccaeec1d1b1dbbc71e18f43031b34b69864d0ec0" resname="form.error">
         <source>form.error</source>
@@ -225,26 +230,26 @@
       <trans-unit id="ee1536aec49276b3a23b8861008ee943786bc7cb" resname="multiselect.all_selected">
         <source>multiselect.all_selected</source>
         <target>All selected</target>
-        <jms:reference-file line="122">Frontend/Home/index.html.twig</jms:reference-file>
-        <jms:reference-file line="536">Frontend/Listing/show.html.twig</jms:reference-file>
+        <jms:reference-file line="354">Frontend/Profile/show.html.twig</jms:reference-file>
+        <jms:reference-file line="577">Frontend/Listing/show.html.twig</jms:reference-file>
         <jms:reference-file line="257">Frontend/ListingResult/result.html.twig</jms:reference-file>
-        <jms:reference-file line="355">Frontend/Profile/show.html.twig</jms:reference-file>
+        <jms:reference-file line="128">Frontend/Home/index.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="780b109aaf541af74b8adc7fb6222d4fda7a980d" resname="multiselect.none_selected">
         <source>multiselect.none_selected</source>
         <target>None selected</target>
-        <jms:reference-file line="123">Frontend/Home/index.html.twig</jms:reference-file>
-        <jms:reference-file line="537">Frontend/Listing/show.html.twig</jms:reference-file>
+        <jms:reference-file line="355">Frontend/Profile/show.html.twig</jms:reference-file>
+        <jms:reference-file line="578">Frontend/Listing/show.html.twig</jms:reference-file>
         <jms:reference-file line="258">Frontend/ListingResult/result.html.twig</jms:reference-file>
-        <jms:reference-file line="356">Frontend/Profile/show.html.twig</jms:reference-file>
+        <jms:reference-file line="129">Frontend/Home/index.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="56aef35256504c5def3af2bfea3c78db49dd8cc3" resname="multiselect.num_selected">
         <source>multiselect.num_selected</source>
         <target>selected</target>
-        <jms:reference-file line="124">Frontend/Home/index.html.twig</jms:reference-file>
-        <jms:reference-file line="538">Frontend/Listing/show.html.twig</jms:reference-file>
+        <jms:reference-file line="356">Frontend/Profile/show.html.twig</jms:reference-file>
+        <jms:reference-file line="579">Frontend/Listing/show.html.twig</jms:reference-file>
         <jms:reference-file line="259">Frontend/ListingResult/result.html.twig</jms:reference-file>
-        <jms:reference-file line="357">Frontend/Profile/show.html.twig</jms:reference-file>
+        <jms:reference-file line="130">Frontend/Home/index.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="7922207fb51f1d5e34be3c837b7ae78b4587854a" resname="nav.asker.link">
         <source>nav.asker.link</source>
@@ -254,18 +259,18 @@
       <trans-unit id="64b6d2da31ab9586cf0bb982e17ac89b0c341592" resname="nav.dashboard.bookings.link">
         <source>nav.dashboard.bookings.link</source>
         <target>Bookings</target>
-        <jms:reference-file line="13">Dashboard/Common/_nav.html.twig</jms:reference-file>
-        <jms:reference-file line="52">Dashboard/Common/_nav.html.twig</jms:reference-file>
         <jms:reference-file line="10">Frontend/Common/_nav.html.twig</jms:reference-file>
         <jms:reference-file line="41">Frontend/Common/_nav.html.twig</jms:reference-file>
+        <jms:reference-file line="13">Dashboard/Common/_nav.html.twig</jms:reference-file>
+        <jms:reference-file line="52">Dashboard/Common/_nav.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="b34b7d4b69d704f8578cff80e633119b04efdeb3" resname="nav.dashboard.comments.link">
         <source>nav.dashboard.comments.link</source>
         <target>Comments</target>
-        <jms:reference-file line="31">Dashboard/Common/_nav.html.twig</jms:reference-file>
-        <jms:reference-file line="64">Dashboard/Common/_nav.html.twig</jms:reference-file>
         <jms:reference-file line="22">Frontend/Common/_nav.html.twig</jms:reference-file>
         <jms:reference-file line="49">Frontend/Common/_nav.html.twig</jms:reference-file>
+        <jms:reference-file line="31">Dashboard/Common/_nav.html.twig</jms:reference-file>
+        <jms:reference-file line="64">Dashboard/Common/_nav.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="00968900491344d2b7b09d638da429219ae8f879" resname="nav.dashboard.link">
         <source>nav.dashboard.link</source>
@@ -275,37 +280,37 @@
       <trans-unit id="2b90079d3b97e0e14afdfe1289c39edc3548586d" resname="nav.dashboard.listings.link">
         <source>nav.dashboard.listings.link</source>
         <target>Listings</target>
-        <jms:reference-file line="19">Dashboard/Common/_nav.html.twig</jms:reference-file>
         <jms:reference-file line="14">Frontend/Common/_nav.html.twig</jms:reference-file>
+        <jms:reference-file line="19">Dashboard/Common/_nav.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="d09d54f19020722643f87ff71f432cb58e355e57" resname="nav.dashboard.messages.link">
         <source>nav.dashboard.messages.link</source>
         <target>Messages</target>
-        <jms:reference-file line="7">Dashboard/Common/_nav.html.twig</jms:reference-file>
-        <jms:reference-file line="46">Dashboard/Common/_nav.html.twig</jms:reference-file>
         <jms:reference-file line="6">Frontend/Common/_nav.html.twig</jms:reference-file>
         <jms:reference-file line="37">Frontend/Common/_nav.html.twig</jms:reference-file>
+        <jms:reference-file line="7">Dashboard/Common/_nav.html.twig</jms:reference-file>
+        <jms:reference-file line="46">Dashboard/Common/_nav.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="eb4abbef7397113b32f5ebef47c0746de14d333a" resname="nav.dashboard.payments.link">
         <source>nav.dashboard.payments.link</source>
         <target>Payments</target>
-        <jms:reference-file line="25">Dashboard/Common/_nav.html.twig</jms:reference-file>
-        <jms:reference-file line="58">Dashboard/Common/_nav.html.twig</jms:reference-file>
         <jms:reference-file line="18">Frontend/Common/_nav.html.twig</jms:reference-file>
         <jms:reference-file line="45">Frontend/Common/_nav.html.twig</jms:reference-file>
+        <jms:reference-file line="25">Dashboard/Common/_nav.html.twig</jms:reference-file>
+        <jms:reference-file line="58">Dashboard/Common/_nav.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="3dadf751fe0bf63fffa61621c6903a1bf4f05b24" resname="nav.dashboard.profile.link">
         <source>nav.dashboard.profile.link</source>
         <target>Profile</target>
-        <jms:reference-file line="37">Dashboard/Common/_nav.html.twig</jms:reference-file>
-        <jms:reference-file line="70">Dashboard/Common/_nav.html.twig</jms:reference-file>
         <jms:reference-file line="26">Frontend/Common/_nav.html.twig</jms:reference-file>
         <jms:reference-file line="53">Frontend/Common/_nav.html.twig</jms:reference-file>
+        <jms:reference-file line="37">Dashboard/Common/_nav.html.twig</jms:reference-file>
+        <jms:reference-file line="70">Dashboard/Common/_nav.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="9cdd94fbd5223a9896cf916b4a1d12bf4909a0bb" resname="nav.faq.slug">
         <source>nav.faq.slug</source>
         <target>faq</target>
-        <jms:reference-file line="53">Frontend/Common/_footer.html.twig</jms:reference-file>
+        <jms:reference-file line="57">Frontend/Common/_footer.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="5d333c9dad0a06048316f4b2174c9fce03a73b2a" resname="nav.favorites.link">
         <source>nav.favorites.link</source>
@@ -316,16 +321,17 @@
         <source>nav.home.link</source>
         <target>Home</target>
         <jms:reference-file line="44">Frontend/Common/_header.html.twig</jms:reference-file>
+        <jms:reference-file line="45">Frontend/Common/_header.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="7b82d68a47d23888af84cb20db4bcd9734f3b056" resname="nav.how_it_works.slug">
         <source>nav.how_it_works.slug</source>
         <target>how-it-works</target>
-        <jms:reference-file line="40">Frontend/Common/_footer.html.twig</jms:reference-file>
+        <jms:reference-file line="44">Frontend/Common/_footer.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="dd86d14d6bac7137d6121b41fd4994663f7ea987" resname="nav.legal_notices.slug">
         <source>nav.legal_notices.slug</source>
         <target>legal-notices</target>
-        <jms:reference-file line="78">Frontend/Common/_footer.html.twig</jms:reference-file>
+        <jms:reference-file line="94">Frontend/Common/_footer.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="e02bfbaa7fa4edd8c578a1be1def202e6c3220ac" resname="nav.listing.new.link">
         <source>nav.listing.new.link</source>
@@ -361,7 +367,7 @@
       <trans-unit id="4d66148bc56e54a9936116977b8f8bbdf6092335" resname="nav.the_team.slug">
         <source>nav.the_team.slug</source>
         <target>the-team</target>
-        <jms:reference-file line="45">Frontend/Common/_footer.html.twig</jms:reference-file>
+        <jms:reference-file line="49">Frontend/Common/_footer.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="ae075cd0545e4ced4f09a93784ae2fc0dfc5e6cf" resname="nav.who_we_are.link">
         <source>nav.who_we_are.link</source>
@@ -371,23 +377,8 @@
       <trans-unit id="25752f0500683a8055d9b148a43277a0977e61ce" resname="nav.who_we_are.slug">
         <source>nav.who_we_are.slug</source>
         <target>who-we-are</target>
-        <jms:reference-file line="35">Frontend/Common/_footer.html.twig</jms:reference-file>
+        <jms:reference-file line="39">Frontend/Common/_footer.html.twig</jms:reference-file>
         <jms:reference-file line="52">Frontend/Common/_header.html.twig</jms:reference-file>
-      </trans-unit>
-      <trans-unit id="2a004ec467e55618ba224e27867bcb893ae731bc" resname="page.error">
-        <source>page.error</source>
-        <target>Erreur</target>
-        <jms:reference-file line="8">views/Exception/error.html.twig</jms:reference-file>
-      </trans-unit>
-      <trans-unit id="cdae46d3a5003ced136ae32725222f26085e174a" resname="page.forbidden">
-        <source>page.forbidden</source>
-        <target state="new">Access forbidden</target>
-        <jms:reference-file line="8">views/Exception/error403.html.twig</jms:reference-file>
-      </trans-unit>
-      <trans-unit id="0c3080174d88613f6d6f124231c6b2e279e89250" resname="page.not.found">
-        <source>page.not.found</source>
-        <target>Page not found</target>
-        <jms:reference-file line="8">views/Exception/error404.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="774b40fc90dcebf1a82352cb39f44e3e36120bad" resname="time_range.invalid.duration">
         <source>time_range.invalid.duration</source>
