--- a/app/Resources/translations/cocorico_booking.fr.xliff
+++ b/app/Resources/translations/cocorico_booking.fr.xliff
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:jms="urn:jms:translation" version="1.2">
-  <file date="2017-07-21T10:14:22Z" source-language="en" target-language="fr" datatype="plaintext" original="not.available">
+  <file date="2017-07-25T08:10:26Z" source-language="en" target-language="fr" datatype="plaintext" original="not.available">
     <header>
       <tool tool-id="JMSTranslationBundle" tool-name="JMSTranslationBundle" tool-version="1.1.0-DEV"/>
       <note>The source node in most cases contains the sample message as written by the developer. If it looks like a dot-delimitted string such as "form.label.firstname", then the developer has not provided a default message.</note>
@@ -181,7 +181,7 @@
       <trans-unit id="fb8cd195e5287c98ab5d472b59c87390c303228f" resname="booking.duration:">
         <source>booking.duration:</source>
         <target>Durée :</target>
-        <jms:reference-file line="60">Frontend/Booking/form_booking_price.html.twig</jms:reference-file>
+        <jms:reference-file line="67">Frontend/Booking/form_booking_price.html.twig</jms:reference-file>
         <jms:reference-file line="100">Frontend/Booking/new.html.twig</jms:reference-file>
         <jms:reference-file line="93">Dashboard/Booking/edit.html.twig</jms:reference-file>
         <jms:reference-file line="92">Dashboard/Booking/_booking_index.html.twig</jms:reference-file>
@@ -226,19 +226,19 @@
         <source>booking.form.end</source>
         <target>Fin</target>
         <jms:reference-file line="74">Type/Frontend/BookingPriceType.php</jms:reference-file>
-        <jms:reference-file line="130">Type/Frontend/BookingNewType.php</jms:reference-file>
+        <jms:reference-file line="131">Type/Frontend/BookingNewType.php</jms:reference-file>
       </trans-unit>
       <trans-unit id="ada2b43ffdca128f52646e92b71ddff6914a942e" resname="booking.form.message">
         <source>booking.form.message</source>
         <target>Votre message :</target>
-        <jms:reference-file line="231">Type/Frontend/BookingNewType.php</jms:reference-file>
+        <jms:reference-file line="232">Type/Frontend/BookingNewType.php</jms:reference-file>
         <jms:reference-file line="54">Type/Dashboard/BookingEditType.php</jms:reference-file>
       </trans-unit>
       <trans-unit id="cf072408dcc5f2939e746af11aa74c3549879f6c" resname="booking.form.start">
         <source>booking.form.start</source>
         <target>Début</target>
         <jms:reference-file line="68">Type/Frontend/BookingPriceType.php</jms:reference-file>
-        <jms:reference-file line="125">Type/Frontend/BookingNewType.php</jms:reference-file>
+        <jms:reference-file line="126">Type/Frontend/BookingNewType.php</jms:reference-file>
       </trans-unit>
       <trans-unit id="cc57b95d50f346e86569e02720d14ef7cdc7780b" resname="booking.form.tac">
         <source>booking.form.tac</source>
@@ -383,6 +383,11 @@
         <source>booking.new.voucher_code.error</source>
         <target>Ce code est invalide.</target>
         <jms:reference-file line="174">Controller/Frontend/BookingController.php</jms:reference-file>
+      </trans-unit>
+      <trans-unit id="74b9050fad2c9a1499fa1379cdc17b25091b1ffb" resname="booking.number_of_people">
+        <source>booking.number_of_people</source>
+        <target state="new">booking.number_of_people</target>
+        <jms:reference-file line="115">Type/Frontend/BookingPriceType.php</jms:reference-file>
       </trans-unit>
       <trans-unit id="120b92535d73cd274ad24e0314361747252b8251" resname="booking.payin.amount.title">
         <source>booking.payin.amount.title</source>
@@ -643,17 +648,17 @@
       <trans-unit id="68af81ad015bd138bbb52a137e8a782c7136b7d3" resname="listing.form.tac">
         <source>listing.form.tac</source>
         <target>J'accepte</target>
-        <jms:reference-file line="143">Type/Frontend/BookingNewType.php</jms:reference-file>
+        <jms:reference-file line="144">Type/Frontend/BookingNewType.php</jms:reference-file>
       </trans-unit>
       <trans-unit id="2d041b5cc9ac200797cc97aa9cd0c6d87aad829a" resname="listing.show.book.now.submit">
         <source>listing.show.book.now.submit</source>
         <target>Réserver</target>
-        <jms:reference-file line="53">Frontend/Booking/form_booking_price.html.twig</jms:reference-file>
+        <jms:reference-file line="60">Frontend/Booking/form_booking_price.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="f92b640c3d85ba29aac9211422a81b36f59f167f" resname="listing.show.excluding_booking_fees">
         <source>listing.show.excluding_booking_fees</source>
         <target>Hors frais de service</target>
-        <jms:reference-file line="55">Frontend/Booking/form_booking_price.html.twig</jms:reference-file>
+        <jms:reference-file line="62">Frontend/Booking/form_booking_price.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="40cdccf226cbb6688a25713f9628b0f3e7959bb4" resname="listing.show.rules:">
         <source>listing.show.rules:</source>
