--- a/app/Resources/translations/cocorico_listing.en.xliff
+++ b/app/Resources/translations/cocorico_listing.en.xliff
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:jms="urn:jms:translation" version="1.2">
-  <file date="2017-07-21T10:16:56Z" source-language="en" target-language="en" datatype="plaintext" original="not.available">
+  <file date="2017-07-25T08:10:08Z" source-language="en" target-language="en" datatype="plaintext" original="not.available">
     <header>
       <tool tool-id="JMSTranslationBundle" tool-name="JMSTranslationBundle" tool-version="1.1.0-DEV"/>
       <note>The source node in most cases contains the sample message as written by the developer. If it looks like a dot-delimitted string such as "form.label.firstname", then the developer has not provided a default message.</note>
@@ -216,11 +216,6 @@
         <target>Listing duplicated successfully. You can now edit it and publish it.</target>
         <jms:reference-file line="65">Dashboard/Offerer/ListingDuplicateController.php</jms:reference-file>
       </trans-unit>
-      <trans-unit id="20232449b77873ece396bc7639211a51ba310dd7" resname="listing.edit.calendar.choose_times.title">
-        <source>listing.edit.calendar.choose_times.title</source>
-        <target>Choose times</target>
-        <jms:reference-file line="65">Dashboard/Listing/edit_availabilities_status.html.twig</jms:reference-file>
-      </trans-unit>
       <trans-unit id="ae04335034ebd144f4a6e71fe6dc8c53b7f2388b" resname="listing.edit.calendar.choose_weekdays.title">
         <source>listing.edit.calendar.choose_weekdays.title</source>
         <target>Choose weekdays</target>
@@ -332,6 +327,11 @@
         <jms:reference-file line="86">Frontend/Listing/show.html.twig</jms:reference-file>
         <jms:reference-file line="15">Dashboard/Listing/form_status_index.html.twig</jms:reference-file>
       </trans-unit>
+      <trans-unit id="0fc63180d80bf27069358ab8ce7dd1c2b5735d0f" resname="listing.edit.expires_at.title">
+        <source>listing.edit.expires_at.title</source>
+        <target>Expires At</target>
+        <jms:reference-file line="66">Dashboard/Listing/edit_availabilities_prices.html.twig</jms:reference-file>
+      </trans-unit>
       <trans-unit id="947447a47864044b83dbfa66d75051c40da52ed9" resname="listing.edit.image.title">
         <source>listing.edit.image.title</source>
         <target>Images</target>
@@ -345,7 +345,7 @@
       </trans-unit>
       <trans-unit id="c75b4ce0fe7a516c4d8346a86942da24eeaee7ef" resname="listing.edit.location.title">
         <source>listing.edit.location.title</source>
-        <target state="new">Location</target>
+        <target>Location</target>
         <jms:reference-file line="35">Dashboard/Listing/edit_location.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="821d47222286c440e14cf46639d5f9d0710f0563" resname="listing.edit.max_bookings.title">
@@ -371,17 +371,17 @@
       <trans-unit id="46a1de37336014d8f90160340a054c528c47e55c" resname="listing.edit.price.calendar.day_click.info">
         <source>listing.edit.price.calendar.day_click.info</source>
         <target>You can click on a date to change its price</target>
-        <jms:reference-file line="122">Dashboard/Listing/edit_availabilities_prices.html.twig</jms:reference-file>
+        <jms:reference-file line="127">Dashboard/Listing/edit_availabilities_prices.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="f32b8e73229cf9aa24db9ddab747c98594ae763b" resname="listing.edit.price.calendar.show.title">
         <source>listing.edit.price.calendar.show.title</source>
         <target>Calendar prices</target>
-        <jms:reference-file line="119">Dashboard/Listing/edit_availabilities_prices.html.twig</jms:reference-file>
+        <jms:reference-file line="124">Dashboard/Listing/edit_availabilities_prices.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="109f29495c61d977b6aa62f816a82d80d2f73f5f" resname="listing.edit.price.choose_weekdays.title">
         <source>listing.edit.price.choose_weekdays.title</source>
         <target>Choose weekdays</target>
-        <jms:reference-file line="80">Dashboard/Listing/edit_availabilities_prices.html.twig</jms:reference-file>
+        <jms:reference-file line="85">Dashboard/Listing/edit_availabilities_prices.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="d6bfdec6bacedf752d6b0b8d615fc18ff394bcd7" resname="listing.edit.price.default.title">
         <source>listing.edit.price.default.title</source>
@@ -398,7 +398,7 @@
       <trans-unit id="1b5a8ab3a8ba981de8c48e9ba6b250125aa32b90" resname="listing.edit.price.range.title">
         <source>listing.edit.price.range.title</source>
         <target>Prices range</target>
-        <jms:reference-file line="70">Dashboard/Listing/edit_availabilities_prices.html.twig</jms:reference-file>
+        <jms:reference-file line="75">Dashboard/Listing/edit_availabilities_prices.html.twig</jms:reference-file>
       </trans-unit>
       <trans-unit id="68ec1a49888802380a72848c5538bef07d9dbfc2" resname="listing.edit.price.simulator.title">
         <source>listing.edit.price.simulator.title</source>
@@ -420,7 +420,7 @@
         <target>Update successful</target>
         <jms:reference-file line="64">Dashboard/Offerer/ListingAvailabilityStatusController.php</jms:reference-file>
         <jms:reference-file line="60">Dashboard/Offerer/ListingPresentationController.php</jms:reference-file>
-        <jms:reference-file line="62">Dashboard/Offerer/ListingCharacteristicController.php</jms:reference-file>
+        <jms:reference-file line="61">Dashboard/Offerer/ListingCharacteristicController.php</jms:reference-file>
         <jms:reference-file line="64">Dashboard/Offerer/ListingAvailabilityPriceController.php</jms:reference-file>
         <jms:reference-file line="82">Dashboard/Offerer/ListingCategoriesController.php</jms:reference-file>
         <jms:reference-file line="94">Dashboard/Offerer/ListingCategoriesAjaxController.php</jms:reference-file>
@@ -661,7 +661,7 @@
       <trans-unit id="a385c95efe54f5b3d6707f5106282c2ae14fc04f" resname="listing.price_save">
         <source>listing.price_save</source>
         <target>Save</target>
-        <jms:reference-file line="27">Dashboard/Listing/form_listing_dish.html.twig</jms:reference-file>
+        <jms:reference-file line="67">Dashboard/Listing/form_listing_dish.html.twig</jms:reference-file>
         <jms:reference-file line="14">Dashboard/Listing/form_discount.html.twig</jms:reference-file>
         <jms:reference-file line="82">Dashboard/Listing/form_price.html.twig</jms:reference-file>
       </trans-unit>
@@ -693,7 +693,8 @@
         <source>listing.save</source>
         <target>Save</target>
         <jms:reference-file line="28">Dashboard/Listing/form_max_bookings.html.twig</jms:reference-file>
-        <jms:reference-file line="109">Dashboard/Listing/edit_availabilities_prices.html.twig</jms:reference-file>
+        <jms:reference-file line="114">Dashboard/Listing/edit_availabilities_prices.html.twig</jms:reference-file>
+        <jms:reference-file line="32">Dashboard/Listing/form_expires_at.html.twig</jms:reference-file>
         <jms:reference-file line="62">Dashboard/Listing/edit_images.html.twig</jms:reference-file>
         <jms:reference-file line="67">Dashboard/Listing/edit_characteristic.html.twig</jms:reference-file>
         <jms:reference-file line="26">Dashboard/Listing/form_categories.html.twig</jms:reference-file>
@@ -952,6 +953,11 @@
         <target>Apply a discount of</target>
         <jms:reference-file line="31">Form/Type/ListingDiscountType.php</jms:reference-file>
       </trans-unit>
+      <trans-unit id="292cddb3199c8f32a8905b2fd9a41612c665f602" resname="listing_edit.form.expires_at">
+        <source>listing_edit.form.expires_at</source>
+        <target>Expires At</target>
+        <jms:reference-file line="36">Type/Dashboard/ListingEditExpiresAt.php</jms:reference-file>
+      </trans-unit>
       <trans-unit id="2a7ed32782de3c0e94705a7559100ba56834e117" resname="listing_edit.form.from_quantity">
         <source>listing_edit.form.from_quantity</source>
         <target>on the price by %quantity_text%, from</target>
@@ -1017,7 +1023,7 @@
       </trans-unit>
       <trans-unit id="c5bf2dc43402f181405558d3cac52645041f475c" resname="listing_location_country.invalid">
         <source>listing_location_country.invalid</source>
-        <target state="new">Invalid country</target>
+        <target>Invalid country</target>
       </trans-unit>
       <trans-unit id="9afa0d417148b9d4c74a5657724593e4c5578d4f" resname="listing_price.min {{ min_price }}">
         <source>listing_price.min {{ min_price }}</source>
